<com.google.android.gms.ads.nativead.NativeAdView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ad_background"
        android:background="@drawable/ad_rounded_corners_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minHeight="50dp">

        <TextView
            android:id="@+id/ad_notification"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/ad_app_icon"
            android:text="@string/ad_notification"
            android:textColor="@color/ad_green"
            android:background="@drawable/ad_rounded_corners_shape"
            android:textStyle="bold"
            android:layout_marginTop="2dp"
            android:textSize="11sp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:paddingHorizontal="6dp"
            android:paddingVertical="2dp"
            android:layout_height="wrap_content" />

        <RatingBar
            android:id="@+id/ad_stars"
            style="?android:attr/ratingBarStyleSmall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ad_call_to_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="0.5" />

        <ImageView
            android:id="@+id/ad_app_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/branding"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cd_icon_ad"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingStart="0dp"
            android:paddingEnd="5dp" />

        <TextView
            android:id="@+id/ad_headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#0000FF"
            android:text="@string/default_headline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/ad_notification"
            app:layout_constraintEnd_toEndOf="@id/end_barrier"
            app:layout_constraintBottom_toTopOf="@id/ad_advertiser"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:textSize="@dimen/ad_headline_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ad_advertiser"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/ad_headline"
            app:layout_constraintStart_toEndOf="@id/ad_app_icon"
            app:layout_constraintBottom_toTopOf="@id/ad_body"
            app:layout_constraintEnd_toEndOf="@id/end_barrier"
            android:layout_marginEnd="4dp"
            android:gravity="bottom"
            android:textSize="@dimen/ad_advertiser_size"
            android:text="@string/default_advertiser"
            android:textStyle="bold" />

        <!--        <com.google.android.gms.ads.nativead.MediaView-->
        <!--            android:id="@+id/ad_media"-->
        <!--            android:layout_gravity="center_horizontal"-->
        <!--            android:layout_width="250dp"-->
        <!--            android:maxHeight="150dp"-->
        <!--            android:minHeight="50dp"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/ad_advertiser"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="5dp" />-->

        <TextView
            android:id="@+id/ad_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/ad_app_icon"
            app:layout_constraintTop_toBottomOf="@id/ad_advertiser"
            app:layout_constraintEnd_toEndOf="@id/end_barrier"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="2dp"
            android:text="@string/default_body"
            android:maxLines="5"
            android:textSize="@dimen/ad_body_size" />

        <!--        <TextView-->
        <!--            android:id="@+id/ad_price"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:paddingLeft="5dp"-->
        <!--            android:paddingStart="5dp"-->
        <!--            android:paddingRight="5dp"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/ad_stars"-->
        <!--            app:layout_constraintBottom_toTopOf="@id/ad_call_to_action"-->
        <!--            android:text="@string/default_price"-->
        <!--            android:paddingEnd="5dp"-->
        <!--            android:textSize="12sp" />-->

        <Button
            android:id="@+id/ad_call_to_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_button"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:paddingHorizontal="8dp"
            android:paddingVertical="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ad_stars"
            android:gravity="center"
            android:textSize="11sp" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/end_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="start"
            app:constraint_referenced_ids="ad_call_to_action,ad_stars" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.gms.ads.nativead.NativeAdView>
